--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@react-theming/storybook-addon": "^1.1.1",
-    "@storybook/addon-actions": "^6.3.0-beta.12",
-    "@storybook/addon-essentials": "^6.3.0-beta.12",
-    "@storybook/addon-links": "^6.3.0-beta.12",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/react": "^6.3.0-beta.12",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "autoprefixer": "^10.2.6",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "storybook-addon-emotion-theme": "^2.1.1",
-    "typescript": "^4.1.2",
-    "vite": "^2.3.5"
-  }
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build-vite": "tsc && vite build",
+        "serve": "vite preview",
+        "story": "start-storybook -p 6006",
+        "build-story": "build-storybook -o dist-story"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.4.0",
+        "@emotion/styled": "^11.3.0",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.14.3",
+        "@react-theming/storybook-addon": "^1.1.1",
+        "@storybook/addon-actions": "^6.3.0-beta.12",
+        "@storybook/addon-essentials": "^6.3.0-beta.12",
+        "@storybook/addon-links": "^6.3.0-beta.12",
+        "@storybook/addon-postcss": "^2.0.0",
+        "@storybook/react": "^6.3.0-beta.12",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@vitejs/plugin-react-refresh": "^1.3.1",
+        "autoprefixer": "^10.2.6",
+        "babel-loader": "^8.2.2",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "postcss-flexbugs-fixes": "^5.0.2",
+        "storybook-addon-emotion-theme": "^2.1.1",
+        "typescript": "^4.1.2",
+        "vite": "^2.3.5"
+    }
 }
