--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "build-story": "build-storybook -o dist-story"
     },
     "dependencies": {
+        "@emotion/css": "^11.1.3",
         "@emotion/react": "^11.4.0",
         "@emotion/styled": "^11.3.0",
         "react": "^17.0.0",
