--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@assets/images/*": ["./src/assets/images/*"],
       "@assets/scss/*": ["./src/assets/scss/*"],
       "@assets/svg/*": ["./src/assets/svg/*"],
+      "@assets/font/*":["./src/assets/font/*"],
       "@components/atoms/*": ["./src/components/atoms/*"],
       "@components/molecule/*": ["./src/components/molecules/*"],
       "@components/organisms/*": ["./src/components/organisms/*"],
