--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@vitejs/plugin-react-refresh": "^1.3.1",
-        "autoprefixer": "^10.2.6",
+        "autoprefixer": "^9",
         "babel-loader": "^8.2.2",
         "babel-plugin-module-resolver": "^4.1.0",
+        "postcss": "^7",
         "postcss-flexbugs-fixes": "^5.0.2",
         "storybook-addon-emotion-theme": "^2.1.1",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat",
         "typescript": "^4.1.2",
         "vite": "^2.3.5"
     }
