--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "devDependencies": {
         "@babel/core": "^7.14.3",
         "@react-theming/storybook-addon": "^1.1.1",
-        "@storybook/addon-actions": "^6.3.0-beta.12",
-        "@storybook/addon-essentials": "^6.3.0-beta.12",
-        "@storybook/addon-links": "^6.3.0-beta.12",
+        "@storybook/addon-actions": "^6.3.0-rc.11",
+        "@storybook/addon-essentials": "^6.3.0-rc.11",
+        "@storybook/addon-links": "^6.3.0-rc.11",
         "@storybook/addon-postcss": "^2.0.0",
-        "@storybook/react": "^6.3.0-beta.12",
+        "@storybook/react": "^6.3.0-rc.11",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@vitejs/plugin-react-refresh": "^1.3.1",
@@ -30,6 +30,7 @@
         "babel-plugin-module-resolver": "^4.1.0",
         "postcss": "^7",
         "postcss-flexbugs-fixes": "^5.0.2",
+        "postcss-preset-env": "^6.7.0",
         "storybook-addon-emotion-theme": "^2.1.1",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat",
         "typescript": "^4.1.2",
