--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "postcss-preset-env": "^6.7.0",
         "storybook-addon-emotion-theme": "^2.1.1",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+        "twin.macro": "^2.5.0",
         "typescript": "^4.1.2",
         "vite": "^2.3.5"
     }
