--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@emotion/css": "^11.1.3",
         "@emotion/react": "^11.4.0",
         "@emotion/styled": "^11.3.0",
+        "polished": "^4.1.3",
         "react": "^17.0.0",
         "react-dom": "^17.0.0"
     },
