feat(organisms)(footer): done footer components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,10 @@
     "baseUrl": ".",
     "typeRoots": ["./src/utils/types/*"],
     "paths": {
-      "@app/*": ["./src/*"],
       "@assets/images/*": ["./src/assets/images/*"],
       "@assets/scss/*": ["./src/assets/scss/*"],
       "@assets/svg/*": ["./src/assets/svg/*"],
-      "@assets/font/*":["./src/assets/font/*"],
+      "@assets/font/*": ["./src/assets/font/*"],
       "@components/atoms/*": ["./src/components/atoms/*"],
       "@components/molecules/*": ["./src/components/molecules/*"],
       "@components/organisms/*": ["./src/components/organisms/*"],
@@ -32,8 +31,10 @@
       "@utils/mocks/*": ["./src/utils/mocks/*"],
       "@utils/helpers/*": ["./src/utils/helpers/*"],
       "@utils/hooks/*": ["./src/utils/hooks/*"],
-      "@utils/libs/*": ["./src/utils/libs/*"]
+      "@utils/libs/*": ["./src/utils/libs/*"],
+      "@base/*": ["./*"],
+      "@app/*": ["./src/*"]
     }
   },
-  "include": ["./src", "stories", "**/*.ts", "**/*.tsx", "**/*.stories.*"],
+  "include": ["./src", "stories", "**/*.ts", "**/*.tsx", "**/*.stories.*"]
 }
