--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "version": "0.0.0",
+    "cjs": true,
     "scripts": {
         "dev": "vite",
         "build:vite": "tsc && vite build",
@@ -13,7 +14,8 @@
         "@emotion/styled": "^11.3.0",
         "polished": "^4.1.3",
         "react": "^17.0.0",
-        "react-dom": "^17.0.0"
+        "react-dom": "^17.0.0",
+        "react-use": "^17.2.4"
     },
     "devDependencies": {
         "@babel/core": "^7.14.3",
