--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@emotion/css": "^11.1.3",
         "@emotion/react": "^11.4.0",
         "@emotion/styled": "^11.3.0",
+        "framer-motion": "^4.1.17",
         "polished": "^4.1.3",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
